--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 .box {
   overflow: hidden;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .img {
@@ -61,6 +62,17 @@ body {
   top: 40.4%;
   left: 42%;
   opacity: 0;
+}
+.box:hover .background-overlay {
+  background: var(--Cyan);
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 399px;
+  opacity: 65%;
+  background-image: cover;
 }
 
 .box:hover .img-equlibrium {
@@ -101,6 +113,7 @@ h3 {
 .card-content1,
 .card-content2 {
   gap: 10px;
+  align-items: center;
 }
 
 .card-content1 h3 {
@@ -150,27 +163,26 @@ span:hover {
 
 @media only screen and (min-width: 413px) {
   h1 {
-    font-size: 2rem;
+    font-size: 1.8rem;
+    font-weight: 600;
   }
 
   h2 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     line-height: 35px;
   }
 
   h3 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
 
   .author h3 {
     font-size: 1.2rem;
   }
-
   .container {
     max-width: 430px;
     margin: 0 auto;
   }
-
   .icon-view {
     position: absolute;
     top: 41.5%;
